5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1637_2704.log
== TEST (2019-04-09 11:56:09) 
-- CODE:
nota = float(input("nota: "))
mensagem = input("S ou N?")
acrescimo = (nota/100*10 + nota)
if(mensagem == s):
	print(acrescimo)
	
else: 
	  print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(mensagem == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:10:17) 
-- CODE:
nota = float(input("nota: "))
mensagem = input("S ou N?")
acrescimo = (nota//100*10 + nota)
if(mensagem == s):
	print(acrescimo)
	
else: 
	  print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(mensagem == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:11:54) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == s):
	print(acrescimo)
	
else: 
	  print(nota)
-- EXECUTION TIME:
0.209161
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 3, in <module>
    acrescimo = (nota/1*10 + nota)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:07) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == s):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.178391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 3, in <module>
    acrescimo = (nota/1*10 + nota)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:09) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == s):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.206083
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 3, in <module>
    acrescimo = (nota/1*10 + nota)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:09) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == s):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.223503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 3, in <module>
    acrescimo = (nota/1*10 + nota)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:10) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == s):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.239307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 3, in <module>
    acrescimo = (nota/1*10 + nota)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:10) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == s):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.330704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 3, in <module>
    acrescimo = (nota/1*10 + nota)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:10) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == s):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.590901
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 3, in <module>
    acrescimo = (nota/1*10 + nota)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:10) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == s):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.658182
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2704/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:10) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == s):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.767868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 3, in <module>
    acrescimo = (nota/1*10 + nota)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:21) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (nota/1*10 + nota)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.140072
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 3, in <module>
    acrescimo = (nota/1*10 + nota)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:41) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a/1*10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.204525
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:42) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a/1*10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.21142
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
9.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:42) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a/1*10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.164951
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
4.4
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:42) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a/1*10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.263921
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:43) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a/1*10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.363513
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
4.4
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
9.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:43) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a/1*10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.154723
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:52) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.126162
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:53) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.143706
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:53) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.177041
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:53) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.33057
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:

-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:54) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.45294
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:54) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.276532
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2704/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:54) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.195148
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2704/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:54) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.178242
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
4.4
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:55) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.198923
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
4.4
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
4.4
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:55) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(a == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.287914
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
4.4
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:

-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:04) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.202752
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:04) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.104019
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:05) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.130607
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
9.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:06) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.258574
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:06) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.215515
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:07) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.438516
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2704/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:07) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.648034
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
4.4
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
4.4
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:07) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.515769
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
4.4
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:07) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.587699
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:07) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "s"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.495717
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2704/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:18) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "S"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.166661
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
55.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
99.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:18) 
-- CODE:
a = float(input("nota: "))
b = input("S ou N?")
acrescimo = (a / 1 * 10 + a)
if(b == "S"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.188723
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
55.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
99.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:14:04) 
-- CODE:
a = float(input("nota: "))
b = str(input("S ou N?"))
acrescimo = (a / 1 * 10 + a)
if(b == "S"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.187704
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
55.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
99.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:14:05) 
-- CODE:
a = float(input("nota: "))
b = str(input("S ou N?"))
acrescimo = (a / 1 * 10 + a)
if(b == "S"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.150955
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
55.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
55.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
99.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:14:05) 
-- CODE:
a = float(input("nota: "))
b = str(input("S ou N?"))
acrescimo = (a / 1 * 10 + a)
if(b == "S"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.187839
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
55.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
99.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:23) 
-- CODE:
a = float(input("nota: "))
b = str(input("S ou N?"))
acrescimo = (a / 1 * 10 + a)
if (b == "S"):
	print(acrescimo)
	
else: 
	  print(a)
-- OUTPUT:
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:37) 
-- CODE:
a = float(input("nota: "))
b = str(input("S ou N?"))
acrescimo = (a / 1 * 10 + a)
if (b == "S"):
	print(acrescimo)
	
else: 
	  print(a)
-- OUTPUT:
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:15:41) 
-- CODE:
a = float(input("nota: "))
b = str(input("S ou N?"))
acrescimo = (a / (1 * 10) + a)
if (b == "S"):
	print(acrescimo)
	
else: 
	  print(a)
-- EXECUTION TIME:
0.232152
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
